--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                 <div class="col-lg-6 col-sm-12 col-md-4">
                     <div class="my-img ">
-                        <img class="content-img" src="img/1661682984517-removebg-preview.png" alt="">
+                        <img class="content-img" src="..img/1661682984517-removebg-preview.png" alt="">
                     </div>
                 </div>
         </div>
